--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -6,8 +6,8 @@
     <title> dong0083@algonquinlive.com - HTML Assignment </title>
 </head>
 <body>
-    <heade>
+    <header>
         <h1> Riyansi Donga</h1>
-    </heade>
+    </header>
 </body>
 </html>
