--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -9,5 +9,32 @@
     <header>
         <h1> Riyansi Donga</h1>
     </header>
+     
+    <article>
+
+    <h1>About Me</h1>
+
+    <p>  
+         I am a passionate individual with interests in various fields including design and technology. My journey began in India, where I developed my skills in graphic design and photography. Currently, I am exploring the world of UI/UX design, eager to learn and grow in this exciting field. I believe that creativity is the 1<sup>st</sup> step towards innovation.
+    </p>
+
+    <blockquote>
+        Believe you can and you are halfway there. -<cite>Theodore Roosevelt</cite>
+    </blockquote>
+
+    <p>
+         In my free time, I enjoy being active outdoors, taking long bike rides, and spending quality time with <em>family and friends.</em> I believe in the power of creativity to evoke emotions and inspire others. My goal is to create meaningful experiences through design and art. 
+    </p>
+
+    <p> 
+        <abbr title="User Interface/User Experience">UI/UX</abbr> design is a field that combines my love for technology and creativity. I am excited about the opportunities that lie ahead and strive to make a positive impact through my work.
+    </p>
+
+    </article>
+  
+    <footer>
+         <p>&copy; 2024 Riyansi Donga</p>
+    </footer>
+
 </body>
 </html>
