--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -19,7 +19,7 @@
     </p>
 
     <blockquote>
-        Believe you can and you are halfway there. -<cite>Theodore Roosevelt</cite>
+        "Believe you can and you are halfway there." -<cite>Theodore Roosevelt</cite>
     </blockquote>
 
     <p>
