--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -14,6 +14,18 @@
 
     <h2>About Me</h2>
 
+    <nav>
+        <ul>
+            <li> 
+                <a href="index.html"> Home</a>
+            </li>
+            <li>
+                <a href="notes.html">Notes</a>
+            </li>  
+        </ul>
+    </nav>
+
+
     <p>  
          I am a passionate individual with interests in various fields including design and technology. My journey began in India, where I developed my skills in graphic design and photography. Currently, I am exploring the world of UI/UX design, eager to learn and grow in this exciting field. I believe that creativity is the 1<sup>st</sup> step towards innovation.
     </p>
@@ -31,6 +43,19 @@
     </p>
 
     </article>
+
+    <section> 
+        <h2>Image</h2> 
+        <img src="images/me.jpg" alt="Picture of me" width="150">
+    </section>
+    
+    <section>
+        <h2> My Hobbies</h2>
+        <ul> 
+            <li>Reading</li>
+            <li>Travelling</li>
+        </ul>
+    </section>
   
     <hr>
     <footer>
