Styling the HTML Website

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title> dong0083@algonquinlive.com - HTML Assignment </title>
+
+    <link rel="stylesheet" href="css/main.css">
+
 </head>
 <body>
     <header>
-        <h1> Riyansi Donga</h1>
+        <h1 class="site-title"> Riyansi Donga</h1>
     </header>
      
     <article>
@@ -46,10 +51,10 @@
 
     <section> 
         <h2>Image</h2> 
-        <img src="images/me.jpg" alt="Picture of me" width="150">
+        <img src="images/me.jpg" alt="Picture of me" width="150" id="my-image">
     </section>
     
-    <section>
+    <section class="my-hobbies">
         <h2> My Hobbies</h2>
         <ul> 
             <li>Reading</li>
