--- a/midterm/index.html
+++ b/midterm/index.html
@@ -6,6 +6,31 @@
     <title> dong0083 - midterm </title>
 </head>
 <body>
+
+    <header>
+        <h1></h1>
+        <img src="" alt="">
+        <p></p>
+    </header>
+
+    <main>
+        <h2></h2>
+        <article>
+            <img src="" alt="">
+            <p></p>
+        </article>
+
+        <section>
+            <h3></h3>
+            <ul></ul>
+        </section>
+
+        <section>
+            <h3></h3>
+            <form></form>
+        </section>
+    </main>
+    
     
 </body>
 </html>
