--- a/midterm/index.html
+++ b/midterm/index.html
@@ -4,32 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> dong0083 - midterm </title>
+    <link rel="Stylesheet" href="css/main.css">
 </head>
 <body>
 
     <header>
-        <h1></h1>
-        <img src="" alt="">
-        <p></p>
+        <h1 class="title"> Lone Starfish</h1>
+        <img src="images/lone-starfish-wide.jpg" alt="Starfish">
+        <nav>
+            <ul>
+                <li> <a href="#">Home</a></li>
+                <li> <a href="#">Story</a></li>
+                 <li> <a href="#">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
-        <h2></h2>
-        <article>
-            <img src="" alt="">
-            <p></p>
+        <article class="article">
+            <h2> Life of a Starfish</h2>
+            <img src="images/lone-starfish.jpg" alt="">
+            <p>Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola. Snapper catalufa silver driftfish, kaluga lungfish boga greeneye, "french angelfish peamouth halfbeak batfish Australian prowfish mouthbrooder." Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf loach beachsalmon archerfish longfin fingerfish, thornfish: plownose chimaera gurnard. Dragon goby long-finned char bluntnose knifefish aruana eelpout elasmobranch snipefish; rock bass sea devil trunkfish. Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra. Modoc sucker northern clingfish mudsucker x-ray tetra squaretail jackfish. Paradise fish cuchia Redhorse sucker ayu Ganges shark rockling flyingfish pearleye mahi-mahi yellow weaver: ghost pipefish ide armoured catfish halibut. Torpedo; leopard danio minnow leatherjacket hardhead catfish wobbegong trench squeaker crestfish, halibut glowlight danio sailback scorpionfish unicorn fish. Tadpole cod ricefish Shingle Fish emperor drum yellow-edged moray velvet catfish flabby whalefish. Featherfin knifefish plaice pike eel tarwhine Black triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua'a barred danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, dottyback.</p>
         </article>
 
-        <section>
-            <h3></h3>
-            <ul></ul>
+        <section class="facts">
+            <h3> Facts About Starfish</h3>
+            <ul>
+                <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
+                <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
+                <li>Herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
+                <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
+            </ul>
         </section>
 
-        <section>
-            <h3></h3>
-            <form></form>
+        <section class="contact">
+            <h3> Contact to learn more</h3>
+            <form action="#" method="post">
+
+                <label for="name">Your Name</label>
+                <input type="text" id="name" name="name">
+
+                <label for="email">Your Email</label>
+                <input type="email" id="email" name="email">
+
+                <label for="message">Your Message</label>
+                <textarea id="message" name="message"></textarea>
+
+                <p>Would you like to visit the starfish?</p>
+                <label><input type="radio" name="visit" value="yes"> Yes</label>
+                <label><input type="radio" name="visit" value="no"> No</label>
+                <label><input type="radio" name="visit" value="maybe"> Maybe</label>
+
+                <button type="submit">Send</button>
+
+            </form>
         </section>
     </main>
+
+    <footer>
+        <p>&#169; Lone Starfish.</p>
+    </footer>
     
     
 </body>
