--- a/midterm/index.html
+++ b/midterm/index.html
@@ -17,9 +17,9 @@
 
             <nav>
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#story">Story</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#home">HOME</a></li>
+                    <li><a href="#story">STORY</a></li>
+                    <li><a href="#contact">CONTACT</a></li>
                 </ul>
             </nav>
 
