--- a/final-project/index.html
+++ b/final-project/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+
     <header>
 
         <div class="logo">
@@ -15,7 +16,7 @@
 
         <nav>
             <ul>
-                <li><a href="#home"> Home</a></li>
+                <li><a href="#about"> Home</a></li>
                 <li><a href="#about"> About Us</a></li>
                 <li><a href="#services"> Services</a></li>
                 <li><a href="#team"> Team</a></li>
@@ -26,6 +27,7 @@
     </header>
 
     <main>
+
         <section class="main-banner">
             <img src="images/main-banner.jpg" alt="Main banner">
             <h1> Welcome to Three Star Media</h1>
@@ -112,6 +114,7 @@
         </section>
 
         <section id="contact">
+
             <h2>Contact Us</h2>
 
             <form>
@@ -129,6 +132,7 @@
             </form>
 
             <div class="loction">
+
                 <h3>Location</h3>
 
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4884.81244378269!2d-75.77769110642093!3d45.35207159999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20-%20Ottawa%20Campus!5e1!3m2!1sen!2sca!4v1732498490927!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -136,7 +140,9 @@
             </div>
 
             <div class="hours">
+
                 <h3>Hours of operation</h3>
+
                 <table>
                     <tr>
                         <th>Days</th>
@@ -158,6 +164,10 @@
 
     </main>
 
-    <footer></footer>
+    <footer>
+        <p> &copy; Three Star Media, 2020</p>
+        <p> All images are taken from <a href="https://unsplash.com/" target="_blank"> Unsplash</a></p>
+    </footer>
+    
 </body>
 </html>
