--- a/final-project/index.html
+++ b/final-project/index.html
@@ -41,17 +41,22 @@
     <main>
 
         <section class="main-banner">
+            <div class="connect">
             <img src="images/main-banner.jpg" alt="Main banner">
             <h1> Welcome to Three Star Media</h1>
             <p> Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
             <a href="#contact" class="btn"> <i class="fa-solid fa-caret-right"></i>Connect with us</a>
+
+            </div> 
         </section>
 
-        <section id="about" class="about">
+        <section id="about">
+        <div class="about">
             <img src="images/about-us.jpg" alt="About Us">
             <h2> About Us</h2>
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Libero unde repellendus exercitationem asperiores ducimus placeat, maxime soluta nesciunt pariatur aliquam consequuntur sequi saepe sint praesentium laboriosam perferendis eius amet ad?
             </p>
+        </div>
         </section>
 
         <!-- Services -->
@@ -101,7 +106,7 @@
 
         <section id="vision">
             <img src="images/vision.jpg" alt="Our Vision">
-            <div>
+            <div class="vision">
                 <h2>Our Vision</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Ex voluptatem deleniti lure, sit, accusantium rerum est commodi veniam tempora perspiciatis nobis officiis fagiat eaque. Veritatis exercitationem delectus ex ab laudantium.</p>
             <a href="#about" class="btn"> <i class="fa-solid fa-caret-right"> </i>Learn More </a>
@@ -120,7 +125,7 @@
                 <img src="images/john.jpg" alt="John Doe">
             </div>
 
-            <div>
+            <div class="team-member">
                 <h3>Bob Rite</h3>
                 <p>CFO and Co-owner</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Amet, aspernatur ratione sed cum ad officiis sint comque fugiat similique. Earum laudantium deleniti possimus? Voluptatem architecto repellendus harum sit voluptatum tempora.
